--- a/app/styles/components/_visualizations/_geo.scss
+++ b/app/styles/components/_visualizations/_geo.scss
@@ -6,8 +6,9 @@
 
 // Nested here instead of giving ever el a class in the js
 .geo__wrap {
-  height: 100%;
+  height: 600px;
   padding: 0;
+  margin: $baseSpace*-4.5 $baseSpace*-1.5 $baseSpace*-1.5;
 
   svg {
     position: relative;
